--- a/package.json
+++ b/package.json
@@ -21,12 +21,15 @@
   "homepage": "https://github.com/Rrroman/rsclone#readme",
   "devDependencies": {
     "@types/webpack-env": "1.16.0",
+    "@typescript-eslint/eslint-plugin": "4.12.0",
+    "@typescript-eslint/parser": "4.12.0",
     "babel-eslint": "10.1.0",
     "clean-webpack-plugin": "3.0.0",
     "copy-webpack-plugin": "7.0.0",
     "css-loader": "5.0.1",
     "eslint": "7.15.0",
     "eslint-config-airbnb-base": "14.2.1",
+    "eslint-config-airbnb-typescript": "12.0.0",
     "eslint-config-prettier": "7.0.0",
     "eslint-plugin-import": "2.22.1",
     "file-loader": "6.2.0",
