--- a/server/package.json
+++ b/server/package.json
@@ -22,9 +22,7 @@
     "express-validator": "^6.9.2",
     "mongodb": "3.6.3",
     "morgan": "1.10.0",
-    "rimraf": "^3.0.2"
-  },
-  "devDependencies": {
+    "rimraf": "^3.0.2",
     "@types/bcryptjs": "^2.4.2",
     "@types/cors": "^2.8.9",
     "@types/express": "4.17.11",
@@ -33,9 +31,11 @@
     "@types/node": "^14.14.6",
     "@typescript-eslint/eslint-plugin": "^4.6.1",
     "@typescript-eslint/parser": "^4.6.1",
-    "eslint-config-prettier": "7.1.0",
-    "eslint-plugin-prettier": "^3.1.4",
     "tsc-watch": "4.2.9",
     "typescript": "^4.0.5"
+  },
+  "devDependencies": {
+    "eslint-config-prettier": "7.1.0",
+    "eslint-plugin-prettier": "^3.1.4"
   }
 }
