fix: add possible heroku settings to start server

--- a/server/package.json
+++ b/server/package.json
@@ -11,7 +11,8 @@
     "prestart": "npm run build",
     "start": "node ./dist/server.js",
     "start:dev": "tsc-watch --onSuccess \"node --inspect ./dist/server.js\"",
-    "lint": "eslint ./src --fix"
+    "lint": "eslint ./src --fix",
+    "start:build": "prebuild && build && prestart && start"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
