--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "install:client": "cd ./client && npm install",
     "install:server": "cd ./server && npm install",
     "postinstall": "run-p install:*",
+    "start:server:build": "cd ./server && npm run start:build",
     "start:server:dev": "cd ./server && npm run start:dev",
     "start:client:dev": "cd ./client && npm run dev",
     "start:dev": "run-p start:*:dev"
