--- a/server/package.json
+++ b/server/package.json
@@ -11,8 +11,7 @@
     "prestart": "npm run build",
     "start": "node ./dist/server.js",
     "start:dev": "tsc-watch --onSuccess \"node --inspect ./dist/server.js\"",
-    "lint": "eslint ./src --fix",
-    "start:build": "npm run prebuild && npm run prestart && npm run start"
+    "lint": "eslint ./src --fix"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
