--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "install:server": "cd ./server && npm install",
     "postinstall": "run-p install:*",
     "start:client:build": "cd ./client && npm run build",
-    "start:server:build": "cd ./server && npm run start",
+    "start:server:build": "npm run start:client:build && cd ./server && npm run start",
     "start:server:dev": "cd ./server && npm run start:dev",
     "start:client:dev": "cd ./client && npm run dev",
     "start:dev": "run-p start:*:dev"
