--- a/client/package.json
+++ b/client/package.json
@@ -21,7 +21,6 @@
   },
   "homepage": "https://github.com/Rrroman/rsclone#readme",
   "devDependencies": {
-    "@types/webpack-env": "1.16.0",
     "@typescript-eslint/eslint-plugin": "4.12.0",
     "@typescript-eslint/parser": "4.12.0",
     "babel-eslint": "10.1.0",
@@ -37,12 +36,13 @@
     "html-webpack-plugin": "4.5.0",
     "style-loader": "2.0.0",
     "ts-loader": "6.2.1",
-    "typescript": "3.7.2",
-    "webpack": "5.11.0",
-    "webpack-cli": "4.2.0",
-    "webpack-dev-server": "3.11.1"
+    "typescript": "3.7.2"
   },
   "dependencies": {
-    "normalize.css": "8.0.1"
+    "normalize.css": "8.0.1",
+    "webpack": "5.11.0",
+    "webpack-cli": "4.2.0",
+    "webpack-dev-server": "3.11.1",
+    "@types/webpack-env": "1.16.0"
   }
 }
