--- a/client/package.json
+++ b/client/package.json
@@ -37,12 +37,12 @@
     "html-webpack-plugin": "4.5.0",
     "style-loader": "2.0.0",
     "ts-loader": "6.2.1",
-    "typescript": "3.7.2",
+    "typescript": "3.7.2"
+  },
+  "dependencies": {
+    "normalize.css": "8.0.1",
     "webpack": "5.11.0",
     "webpack-cli": "4.2.0",
     "webpack-dev-server": "3.11.1"
-  },
-  "dependencies": {
-    "normalize.css": "8.0.1"
   }
 }
