--- a/client/package.json
+++ b/client/package.json
@@ -5,7 +5,7 @@
   "private": true,
   "scripts": {
     "build": "webpack --mode production",
-    "heroku-postbuild": "webpack -p",
+    "heroku-postbuild": "webpack --mode production",
     "watch": "webpack --mode development --watch",
     "serve": "webpack serve --open",
     "dev": "npm-run-all -p watch serve"
