--- a/package.json
+++ b/package.json
@@ -22,13 +22,16 @@
   },
   "homepage": "https://github.com/Rrroman/rsclone#readme",
   "devDependencies": {
+    "@types/jsonwebtoken": "^8.5.0",
     "eslint": "7.15.0",
     "husky": "4.3.5",
     "lint-staged": "10.5.3",
     "npm-run-all": "4.1.5",
     "prettier": "2.2.1"
   },
-  "dependencies": {},
+  "dependencies": {
+    "jsonwebtoken": "^8.5.1"
+  },
   "husky": {
     "hooks": {
       "pre-commit": "lint-staged"
