--- a/package.json
+++ b/package.json
@@ -31,8 +31,7 @@
     "prettier": "2.2.1"
   },
   "dependencies": {
-    "npm-run-all": "4.1.5",
-    "jsonwebtoken": "^8.5.1"
+    "npm-run-all": "4.1.5"
   },
   "husky": {
     "hooks": {
