--- a/server/package.json
+++ b/server/package.json
@@ -32,7 +32,8 @@
     "@typescript-eslint/eslint-plugin": "^4.6.1",
     "@typescript-eslint/parser": "^4.6.1",
     "tsc-watch": "4.2.9",
-    "typescript": "^4.0.5"
+    "typescript": "^4.0.5",
+    "jsonwebtoken": "^8.5.1"
   },
   "devDependencies": {
     "eslint-config-prettier": "7.1.0",
