--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   },
   "homepage": "https://github.com/Rrroman/rsclone#readme",
   "devDependencies": {
-    "@types/jsonwebtoken": "^8.5.0",
+    "@types/jsonwebtoken": "8.5.0",
     "eslint": "7.15.0",
     "husky": "4.3.5",
     "lint-staged": "10.5.3",
