--- a/server/package.json
+++ b/server/package.json
@@ -36,6 +36,7 @@
     "jsonwebtoken": "^8.5.1"
   },
   "devDependencies": {
+    "@types/jsonwebtoken": "8.5.0",
     "eslint-config-prettier": "7.1.0",
     "eslint-plugin-prettier": "^3.1.4"
   }
