--- a/server/package.json
+++ b/server/package.json
@@ -33,10 +33,10 @@
     "@typescript-eslint/parser": "^4.6.1",
     "tsc-watch": "4.2.9",
     "typescript": "^4.0.5",
-    "jsonwebtoken": "^8.5.1"
+    "jsonwebtoken": "^8.5.1",
+    "@types/jsonwebtoken": "8.5.0"
   },
   "devDependencies": {
-    "@types/jsonwebtoken": "8.5.0",
     "eslint-config-prettier": "7.1.0",
     "eslint-plugin-prettier": "^3.1.4"
   }
