--- a/server/package.json
+++ b/server/package.json
@@ -14,7 +14,7 @@
     "lint": "eslint ./src --fix"
   },
   "dependencies": {
-    "@types/jsonwebtoken": "^8.5.0",
+    "@types/jsonwebtoken": "8.5.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "1.19.0",
     "cors": "2.8.5",
@@ -34,9 +34,7 @@
     "@typescript-eslint/eslint-plugin": "^4.6.1",
     "@typescript-eslint/parser": "^4.6.1",
     "tsc-watch": "4.2.9",
-    "typescript": "^4.0.5",
-    "jsonwebtoken": "^8.5.1",
-    "@types/jsonwebtoken": "8.5.0"
+    "typescript": "^4.0.5"
   },
   "devDependencies": {
     "eslint-config-prettier": "7.1.0",
