--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "install:client": "cd ./client && npm install",
     "install:server": "cd ./server && npm install",
     "postinstall": "run-p install:*",
-    "heroku-postbuild": "cd ./client npm run build",
+    "heroku-postbuild": "cd ./client && npm run build",
     "start:server:build": "cd ./server && npm run start",
     "start:server:dev": "cd ./server && npm run start:dev",
     "start:client:dev": "cd ./client && npm run dev",
