--- a/client/package.json
+++ b/client/package.json
@@ -24,7 +24,6 @@
     "@typescript-eslint/eslint-plugin": "4.12.0",
     "@typescript-eslint/parser": "4.12.0",
     "babel-eslint": "10.1.0",
-    "clean-webpack-plugin": "3.0.0",
     "copy-webpack-plugin": "7.0.0",
     "css-loader": "5.0.1",
     "css-modules-typescript-loader": "4.0.1",
@@ -42,6 +41,7 @@
     "webpack": "5.11.0",
     "webpack-cli": "4.2.0",
     "webpack-dev-server": "3.11.1",
-    "html-webpack-plugin": "4.5.0"
+    "html-webpack-plugin": "4.5.0",
+    "clean-webpack-plugin": "3.0.0"
   }
 }
