--- a/client/package.json
+++ b/client/package.json
@@ -2,6 +2,9 @@
   "name": "rsclone-client",
   "version": "1.0.0",
   "description": "RSSchool team task",
+  "engines": {
+    "node": "12.18.2"
+  },
   "private": true,
   "scripts": {
     "build": "webpack --mode production",
